<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>pihcore</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>PIH Core Module</name>
	<description>Core metadata and configuration included in all PIH distributions</description>
	<url>https://wiki.openmrs.org/display/docs/PIH+Core+Module+Module</url>
	
	<developers>
		<developer>
			<name>PIH</name>
		</developer>
	</developers>
	
	<organization>
		<name>PIH</name>
		<url>http://pih.org</url>
	</organization>

	<scm>
		<connection>scm:git:git@github.com:PIH/openmrs-module-pihcore.git</connection>
		<developerConnection>scm:git:git@github.com:PIH/openmrs-module-pihcore.git</developerConnection>
		<url>scm:git:git@github.com:PIH/openmrs-module-pihcore.git</url>
	</scm>

	<distributionManagement>
		<repository>
			<id>openmrs-repo-modules</id>
			<name>Modules</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules/</url>
		</repository>
		<snapshotRepository>
			<id>openmrs-repo-snapshots</id>
			<name>OpenMRS Snapshots</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<modules>
		<module>api</module>
		<module>omod</module>
	</modules>
	
	<properties>
		<openMRSVersion>1.9.8</openMRSVersion>
		<metadatadeployVersion>1.5-SNAPSHOT</metadatadeployVersion>
		<metadatasharingVersion>1.1.9</metadatasharingVersion>
        <htmlformentryVersion>2.6-SNAPSHOT</htmlformentryVersion>
        <printerVersion>1.2-SNAPSHOT</printerVersion>
        <emrapiVersion>1.7-SNAPSHOT</emrapiVersion>
        <emrVersion>2.0-SNAPSHOT</emrVersion>
        <registrationcoreVersion>1.2-SNAPSHOT</registrationcoreVersion>
        <coreappsVersion>1.7-SNAPSHOT</coreappsVersion>
        <uiframeworkVersion>3.4-SNAPSHOT</uiframeworkVersion>
        <reportingVersion>0.9.5-SNAPSHOT</reportingVersion>
        <paperrecordVersion>1.0-SNAPSHOT</paperrecordVersion>
        <idgenVersion>4.0-SNAPSHOT</idgenVersion>
        <serializationxstreamVersion>0.2.8-SNAPSHOT</serializationxstreamVersion>
        <calculationVersion>1.1</calculationVersion>
        <appframeworkVersion>2.4-SNAPSHOT</appframeworkVersion>
        <providermanagementVersion>2.2</providermanagementVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openmrs.api</groupId>
			<artifactId>openmrs-api</artifactId>
			<version>${openMRSVersion}</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.web</groupId>
			<artifactId>openmrs-web</artifactId>
			<version>${openMRSVersion}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.api</groupId>
			<artifactId>openmrs-api</artifactId>
			<version>${openMRSVersion}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.test</groupId>
			<artifactId>openmrs-test</artifactId>
			<version>${openMRSVersion}</version>
			<type>pom</type>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>metadatadeploy-api</artifactId>
			<version>${metadatadeployVersion}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>metadatasharing-api</artifactId>
			<version>${metadatasharingVersion}</version>
			<scope>provided</scope>
		</dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>printer-api</artifactId>
            <version>${printerVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api-1.9</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>

        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
            <version>${emrapiVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emr-api</artifactId>
            <version>${emrVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>registrationcore-api</artifactId>
            <version>${registrationcoreVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>coreapps-api</artifactId>
            <version>${coreappsVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uiframework-api</artifactId>
            <version>${uiframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
            <version>${reportingVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>paperrecord-api</artifactId>
            <version>${paperrecordVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen-api</artifactId>
            <version>${idgenVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>calculation-api</artifactId>
            <version>${calculationVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>providermanagement-api</artifactId>
            <version>${providermanagementVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appframework-api</artifactId>
            <version>${appframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<target>1.6</target>
						<source>1.6</source>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<executions>
						<execution>
							<goals>
								<goal>test-jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
					<configuration>
						<argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m</argLine>
						<includes>
							<include>**/*Test.java</include>
						</includes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>
